# flatpak-authenticator

./: README.md  io.elementary.flatpak-authenticator.yml  meson.build
.github/workflows/: ci.yml
data/: io.elementary.FlatpakAuthenticator.json  io.elementary.FlatpakAuthenticator.service  io.elementary.flatpak-authenticator.json  meson.build
src/: Application.vala  AuthServices.vala  Authenticator.vala  AuthenticatorRequest.vala  LoginDialog.vala  StoredTokens.vala  Utils.vala  Webflow.vala
src/Dialogs/: LoginDialog.vala  PurchaseDialog.vala  StripeDialog.vala
src/Widgets/: CardNumberEntry.vala  HumbleButton.vala  HumblePopover.vala  PaymentMethodButton.vala
